BUG#6554 Problem Building MySql on Fedora Core 3  - Moved static variables defined inside of function to file scope to avoid this linking problem on FC3